updated pharmacy link to Blue Rabbit

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<li><a href="#services" class="tracked" data-event="Header_Services">   Services   </a></li>
 					<li><a href="#contact" class="tracked" data-event="Header_Contact">   Contact   </a></li>
 					<li><a href='https://www.yelp.com/biz/medranovets-san-francisco' target="_blank" class="tracked" data-event="Header_Yelp">   Yelp   </a><li>
-					<li><a href='https://medranovets.vetsfirstchoice.com/' target="_blank" class="tracked" data-event="Header_Shop">   Shop   </a><li>
+					<li><a href='https://medvetsf.bluerabbitrx.com' target="_blank" class="tracked" data-event="Header_Shop">   Shop   </a><li>
 			
 				</ul>
 			</nav>
