updated some pricing and changed some content

--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
 							</div>
 							<div class="3u">
 								<section class="box style1">
-									<h3>Access records</h3>
-									<p>All previous and current medical records are available on the cloud when you need them.</p>
+									<h3>Plan for wellness</h3>
+									<p>We help plan for long term wellness through lifestyle, nutrition, and enrichment.</p>
 								</section>
 							</div>
 							<div class="3u">
 								<section class="box style1">
 									<h3>Get reminders</h3>
-									<p>We'll let you know when it's time for a checkup or a vaccine update.<br/><br/></p>
+									<p>We'll let you know when it's time for a checkup or a vaccine update.<br/></p>
 								</section>
 							</div>
 						</div>
@@ -126,7 +126,9 @@
 				<article id="dr_medrano">
 					<header>
 						<h2>Meet Marcia Medrano, DVM</h2>
-						<p>Dr. Medrano graduated from St. George's University and completed her clinical year at the University of Pennsylvania.</p>
+						<p>Dr. Medrano is originally from Miami, Florida. She graduated with honors from St. George's University and completed her clinical year at the University of Pennsylvania. Prior to relocating to sunny California, she completed an internship at a busy specialty hospital in NYC.</p>
+						<p>Dr. Medrano loves being a house call veterinarian. She enjoys getting to know each of her patients and cares for them as if they are her own. </p>
+						<p>In her spare time Dr. Medrano enjoys hiking, live music, painting, and traveling with her husband and kitty, Schmitty the Siamese mix.</p>
 					</header>
 					<div class="container">
 						<div class="row">
@@ -166,29 +168,38 @@
 							<div class="6u">
 								<section class="box style1">
 									<h3 style='text-align: left; color: #43B3E0'>House Call: $199</h3>
-									<p style='padding: 0px; margin: 0px; text-align: left; margin-left: 60px; font-weight: bold'>Includes:</p>
+									<p style='padding: 0px; margin: 0px; text-align: left; margin-left: 60px; font-weight: bold'>Includes</p>
 									<ul class='left check'>
 										<li>Physical exam</li>
-										<li>Ear cleaning</li>
+										<!-- <li>Ear cleaning</li>
 										<li>Nail trimming</li>
-										<li>Anal Gland expression (if needed)</li>
+										<li>Anal Gland expression (if needed)</li> -->
 										<li>Unlimited Q&A</li>
 										<li>Follow-up communications</li>	
-										<li>$269 includes above plus two vaccinations</li>									</ul>
+										<!-- <li>$269 includes above plus two vaccinations</li>									 -->
+									</ul>
+									<p style='padding: 0px; margin: 0px; text-align: left; margin-left: 60px; font-weight: bold'>Available</p>
+									<ul class='left check'>
+										<li>Vaccinations: $45 – $65</li>
+										<li>Ear cleaning: $35</li>
+										<li>Nail trimming: $35 – $45</li>
+										<li>Anal Gland expression: $45</li>
+									</ul>
 								</section>
 							</div>
 							<div class="6u">
 								<section class="box style1">
 									<h3 style='text-align: left; color: #43B3E0'>Diagnostics: Additional cost</h3>
 									<ul class='left check'>
-										<li>Additional vaccinations</li>
 										<li>Fecal testing</li>
 										<li>Heartworm testing</li>
 										<li>Comprehensive blood work</li>
 										<li>Urinalysis and/or culture</li>
 										<li>Ear and skin cytology</li>
 										<li>Fine needle aspirates</li>	
-										<li>USDA health certificates</li>										
+										<li>USDA health certificates</li>		
+										<li>Microchipping</li>
+										<br><br>								
 									</ul>
 								</section>
 							</div>
@@ -207,7 +218,7 @@
 					<div>
 						<div class="row">
 							<div class="12u" style='text-align: center'>
-								<p>Servicing San Francisco<p>
+								<p>Servicing San Francisco &amp; surrounding communities<p>
 								<a href=tel:4155068387 style='text-decoration: none;' class="tracked"  data-event="Footer_Call"><p style='color: #43B3E0; font-weight: bold'>415.506.VETS</p></a>
 								<a href=mailto:contact@medvetsf.com style='text-decoration: none;' class="tracked" data-event="Footer_Email"><p style='color: #84b123; font-weight: bold'>contact@medvetsf.com</p></a>
 							</div>
